# northwind-demo

./: .gitignore  README.md  pyproject.toml  pyrefly.toml
alex-demo/: README.md  package-lock.json  package.json  vite.config.ts
alex-demo/src/lib/: ChartBlock.svelte  api.ts  markdown.ts  types.ts
alex-demo/src/routes/: +layout.svelte  +page.svelte  +page.ts
alex-demo/src/routes/[level]/: +page.svelte  +page.ts
backend/: .env.example  __init__.py  agent.py  chart_renderer.py  main.py  models.py  pyproject.toml  settings.py  telegram_bot.py  workspace.py
backend/agents/: __init__.py  level1-agent.py  level2-agent.py  level3-agent.py  level4-agent.py
backend/templates/: chart.html.j2  report.html.j2
backend/tools/: __init__.py  chart_renderer.py  common.py  execute_python.py  execute_sql.py  extract_and_render_reports.py  render_document.py  run_shell.py
northwind-demo/: README.md  package-lock.json  package.json
northwind-demo/src/lib/: api.ts  config.ts  types.ts
northwind-demo/src/routes/[level]/: +page.svelte
