[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Alex — Northwind AI Analyst"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.2",
    "playwright>=1.58.0",
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
]
